--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,18 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+title: Qasim Ali # the website title (if blank, full name will be used instead)
+first_name: Muhammad
+middle_name: Qasim
+last_name: Ali
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Graduate student in Engineering at the University of Waterloo, studying world models and reinforcement learning. My industry background is in embedded systems and autonomous driving. 
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+  This is my personal website, where I share my research, projects, and publications. Feel free to contact me via email or connect with me on social media.
+keywords: Generative AI, Video Generation, Reinforcement Learning, Contrastive Learning, Self-supervised learning, Embodied AI, Diffusion Models, Masked Transformers  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🎯 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://qasim-ali0.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
