--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -45,7 +45,7 @@ scholar_userid: bd0TkF0AAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social: # can be any name here other than the ones already defined above
-  logo: https://thumbs.dreamstime.com/b/astronaut-logo-icon-space-man-walking-template-symbol-sign-astronaut-logo-icon-space-man-walking-template-symbol-sign-vector-383215478.jpg # can be png, svg, jpg
+# custom_social: # can be any name here other than the ones already defined above
+#   logo: https://thumbs.dreamstime.com/b/astronaut-logo-icon-space-man-walking-template-symbol-sign-astronaut-logo-icon-space-man-walking-template-symbol-sign-vector-383215478.jpg # can be png, svg, jpg
   # title: Custom Social
   # url: https://www.alberteinstein.com/
