--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: My Blog # blog_name will be displayed in your blog page
-blog_description: Interesting ideas I came across while reading.
+blog_name:  # blog_name will be displayed in your blog page
+blog_description: # Interesting ideas I came across while reading.
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
