--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text: >
   This is my personal website, where I share my research, projects, and publications. Feel free to contact me via email or connect with me on social media.
 keywords: Generative AI, Video Generation, Reinforcement Learning, Contrastive Learning, Self-supervised learning, Embodied AI, Diffusion Models, Masked Transformers  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🎯 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🛸 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://qasim-ali0.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
